Added option for custom DSOMM import from yaml. Added migration to change existing default DSOMM external ids so no conflict occurs. Added metamodel type, because now we can have many DSOMM variations.

--- a/templates/application/model/tabs/_evaluation_tab.html.twig
+++ b/templates/application/model/tabs/_evaluation_tab.html.twig
@@ -9,7 +9,7 @@
         {% set templateName = assessmentStream.assessment.project.templateProject ? assessmentStream.assessment.project.templateProject.name : null %}
         {# question \App\Entity\Question #}
         {% for question in questions %}
-            {% if assessmentStream.stream.practice.businessFunction.metamodel.id == constant('App\\Utils\\Constants::DSOMM_ID') %}
+            {% if assessmentStream.stream.practice.businessFunction.metamodel.type == constant('App\\Enum\\MetamodelType::DSOMM') %}
                 <input id="questionCount" hidden value="{{ questions|length }}"></input>
             {% endif %}
             {% set answers = question.getAnswers() %}
